# archived-vnfsdk-ves-agent

./: .gitreview  INFO.yaml  groups  project.config  reviewers.config
veslibrary/ves_clibrary/: readme.md
veslibrary/ves_clibrary/VESreporting_vFW/: Makefile  README.md  fw_common_config.txt  fw_flt_config.txt  fw_json_sample.txt  fw_meas_config.txt  vpp_measurement_reporter.c
veslibrary/ves_clibrary/VESreporting_vLB/: Makefile  pom.xml
veslibrary/ves_clibrary/evel/evel-library/bldjobs/: Makefile
veslibrary/ves_clibrary/evel/evel-library/code/VESreporting_HB/: .flt_config.json.swo  .flt_config.json.swp  hb_config.json  sample_heartbeat_event.txt  ves_heartbeat_reporter.c
veslibrary/ves_clibrary/evel/evel-library/code/VESreporting_fault/: flt_config.json  pom.xml  sample_fault_events.txt  ves_fault_reporter.c
veslibrary/ves_clibrary/evel/evel-library/code/VESreporting_syslog/: pom.xml  sample_syslog_event.txt  ves_syslog_reporter.c
veslibrary/ves_clibrary/evel/evel-library/code/VESreporting_vFW/: .meas_config.json.swp  meas_config.json  sample_measurement_event.txt  vpp_measurement_reporter.c
veslibrary/ves_clibrary/evel/evel-library/code/evel_library/: evel.c  evel.h  (+27 more)
veslibrary/ves_cpplibrary/: README.md
veslibrary/ves_cpplibrary/src/: CMakeLists.txt  Makefile
veslibrary/ves_cpplibrary/src/cmake/: leveldbConfig.cmake  thriftConfig.cmake  xencodeConfig.cmake  xlogConfig.cmake  xtransportConfig.cmake
veslibrary/ves_cpplibrary/src/lib/: CMakeLists.txt
veslibrary/ves_cpplibrary/src/lib/common/: XLog.cpp  XLog.h
veslibrary/ves_cpplibrary/src/lib/encode/: CMakeLists.txt  XBatch.cpp  XBatchImp.cpp  XBatchImp.h  XCodecsInUse.cpp  XCodecsInUseImp.cpp  XCodecsInUseImp.h  XCommonEventHeader.cpp  XCommonEventHeaderImp.cpp  XCommonEventHeaderImp.h  XCounter.cpp  XCounterImp.cpp  XCounterImp.h  XCpuUsage.cpp  XCpuUsageImp.cpp  XCpuUsageImp.h  XDiskUsage.cpp  XDiskUsageImp.cpp  XDiskUsageImp.h  XEndOfCallVqmSummaries.cpp  XEndOfCallVqmSummariesImp.cpp  XEndOfCallVqmSummariesImp.h  XFaultFields.cpp  XFaultFieldsImp.cpp  XFaultFieldsImp.h  XFilesystemUsage.cpp  XFilesystemUsageImp.cpp  XFilesystemUsageImp.h  XGtpPerFlowMetrics.cpp  XGtpPerFlowMetricsImp.cpp  XGtpPerFlowMetricsImp.h  XHeartbeatFields.cpp  XHeartbeatFieldsImp.cpp  XHeartbeatFieldsImp.h  XHugePages.cpp  XHugePagesImp.cpp  XHugePagesImp.h  XInternal.cpp  XInternal.h  XIpmi.cpp  (+95 more)
veslibrary/ves_cpplibrary/src/lib/encode/include/: XBatch.h  XCodecsInUse.h  XCommonEventHeader.h  XCounter.h  XCpuUsage.h  XDiskUsage.h  XEndOfCallVqmSummaries.h  XEvent.h  XFaultFields.h  XFilesystemUsage.h  XGtpPerFlowMetrics.h  XHeartbeatFields.h  XHugePages.h  XIpmi.h  XIpmiBaseboardTemperature.h  XIpmiBaseboardVoltageRegulator.h  XIpmiBattery.h  XIpmiFan.h  XIpmiGlobalAggregateTemperatureMargin.h  XIpmiHsbp.h  XIpmiNic.h  XIpmiPowerSupply.h  XIpmiProcessor.h  XJsonObject.h  XJsonObjectInstance.h  XKey.h  XLatencyBucketMeasure.h  XLoad.h  XMachineCheckException.h  XMeasurementFields.h  XMemoryUsage.h  XMobileFlowFields.h  XNamedHashMap.h  XNicPerformance.h  XNotificationFields.h  XOtherFields.h  XPnfRegistrationFields.h  XProcessStats.h  XProcessorDimmAggregateThermalMargin.h  XSipSignalingFields.h  (+5 more)
veslibrary/ves_cpplibrary/src/lib/transport/: CMakeLists.txt  XBufferedTransport.cpp  XBufferedTransport.h  XDiskQueue.cpp  XDiskQueue.h  XLibcurlTransport.cpp  XLibcurlTransport.h  XMemQueue.cpp  XMemQueue.h  XQueue.cpp  XRetryTransport.cpp  XRetryTransport.h  XRpcClientTransport.cpp  XRpcClientTransport.h  XRpcServertTransport.cpp  XRpcServertTransport.h  XSwitchableTransport.cpp  XSwitchableTransport.h  XSynchronizedTransport.cpp  XSynchronizedTransport.h  XTransport.cpp  rpc.idl
veslibrary/ves_cpplibrary/src/lib/transport/gen-cpp/: XRpcTransport.cpp  XRpcTransport.h  rpc_constants.cpp  rpc_constants.h  rpc_types.cpp  rpc_types.h
veslibrary/ves_cpplibrary/src/lib/transport/include/: XQueue.h  XTransport.h
veslibrary/ves_cpplibrary/src/test/: CMakeLists.txt  EventSamples.cpp  EventSamples.h  TransportSamples.cpp  TransportSamples.h  XEventSamples.cpp  XMain.cpp  XTransportSamples.cpp  XTransportSamples.h  main.cpp
veslibrary/ves_cpplibrary/src/test/cmake/: xencodeConfig.cmake  xlogConfig.cmake
veslibrary/ves_javalibrary/evel_javalib2/: dependency-reduced-pom.xml  pom.xml
veslibrary/ves_javalibrary/evel_javalib2/src_test/: java_agent_test
veslibrary/ves_javalibrary/evel_javalib2/src_test/maindir/: Main.java
(+56 files in other folders)
